--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
 
     </section>
     <div id="morebuttons">
-        <p>More buttons?</p>
+        <p>More buttons? (Right-click to remove.)</p>
         <form action="">
             <input type="text" id="buttonName">
-            <input type="submit" id="submitButton" onclick="clickNewButton(event)">
+            <input type="submit" name="ok" id="submitButton" onclick="clickNewButton(event)">
         </form>
         <br> <br>
     </div>
